# homeassistant-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.example.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mcp_config.json  pyproject.toml  requirements.txt  server.py  setup.sh  start_mcp.sh  start_server.sh
tests/: test_area_registry_websocket.py  test_connection.py  test_create_automation_pagination.py  test_get_area_entities.py  test_http_transport.py  test_mcp_tools.py  test_new_features.py  test_security.py  test_sse_not_implemented.py  test_tool_handlers.py  test_ws_max_msg_size.py
