[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant-mcp"
version = "1.0.0"
description = "Home Assistant MCP server — control Home Assistant via the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Maxime Allanic" }]
dependencies = [
    "aiohttp>=3.8.0",
    "mcp>=1.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
homeassistant-mcp = "server:cli"

[tool.setuptools]
py-modules = ["server"]
